--- a/.cursorignore
+++ b/.cursorignore
@@ -1,18 +1,27 @@
-# 디자인 및 레이아웃 파일 보호
+# =====================================================
+# 🚨 절대 수정 금지 파일들 🚨
+# =====================================================
+
+# 🏗️ 핵심 레이아웃 파일 - 절대 건드리지 마세요
 src/app/layout.tsx
 src/app/page.tsx
 src/app/about/page.tsx
-src/app/globals.css
+src/app/posts/[...slug]/page.tsx
+src/app/category/[category]/page.tsx
+src/app/tags/page.tsx
+src/app/books/page.tsx
 
-# 핵심 컴포넌트 보호
+# 🧩 UI 컴포넌트 - 절대 건드리지 마세요
 src/components/CategoryDropdown.tsx
 src/components/MobileNav.tsx
-src/components/ThemeToggle.tsx
 src/components/Navigation.tsx
 
-# 스타일링 관련 파일
+# 🎨 스타일링 시스템 - 절대 건드리지 마세요
+src/app/globals.css
 tailwind.config.js
 postcss.config.mjs
+
+# ⚙️ 중요 설정 파일 - 절대 건드리지 마세요
 
 # 설정 파일들
 next.config.ts
