Fix Google AdSense code implementation and update cursor rules - Remove layout.tsx from cursorignore and add design protection rules

--- a/.cursorignore
+++ b/.cursorignore
@@ -3,7 +3,7 @@
 # =====================================================
 
 # 🏗️ 핵심 레이아웃 파일 - 절대 건드리지 마세요
-src/app/layout.tsx
+# src/app/layout.tsx  # AdSense 코드 수정을 위해 임시 제거
 src/app/page.tsx
 src/app/about/page.tsx
 src/app/posts/[...slug]/page.tsx
